--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -15,14 +15,20 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="search">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Search
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            <NavLink class="nav-link" href="shoppingList">
+                <span class="bi bi-cart-fill-nav-menu" aria-hidden="true"></span> Shopping List
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="favorites">
+                <span class="bi bi-suit-heart-fill-nav-menu" aria-hidden="true"></span> Favorites
             </NavLink>
         </div>
     </nav>
