--- a/MealHelperUI/Components/UI/Card.razor
+++ b/MealHelperUI/Components/UI/Card.razor
@@ -5,12 +5,11 @@
 
 <div id="container">
     <div class="card m-4">
-        <img class="card-img-top" src="@mealImage">
+        <a href="details"><img class="card-img-top" src="@mealImage"></a>
         <div class="card-body">
             <h3 class="card-title">@mealName</h3>
-            <button class="btn btn-primary" onclick="AddToShoppingList">Add to List</button>
-            <a href="details" class="btn btn-primary">View Details</a>
-            <button class="btn btn-primary" onclick="AddToFavorites">Favorite</button>
+            <button class="btn btn-primary listButton" onclick="AddToShoppingList">Add to List</button>
+            <button class="btn btn-primary favoriteButton" onclick="AddToFavorites">Favorite</button>
         </div>
     </div>
 </div>
