--- a/MealHelperUI/Components/UI/Card.razor.css
+++ b/MealHelperUI/Components/UI/Card.razor.css
@@ -4,8 +4,22 @@
 
 .card {
     width: 300px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    transition: transform .2s;
+}
+
+.card:hover {
+    transform: scale(1.1);
 }
 
 .card-title {
     text-align:center;
+}
+
+.listButton {
+    float: left;
+}
+
+.favoriteButton {
+    float: right;
 }
