--- a/MealHelperUI/Components/Pages/Search.razor
+++ b/MealHelperUI/Components/Pages/Search.razor
@@ -47,7 +47,7 @@ else
     <div id="container">
         @foreach (Meal meal in meals)
         {
-            <MealCard mealName=@meal.name mealImage=@meal.image mealId="@meal.mealId"></MealCard>
+            <MealCard mealName=@meal.name mealImage=@meal.image mealId="@meal.mealId" />
         }
     </div>
 }
