--- a/MealHelperUI/Components/Pages/Search.razor
+++ b/MealHelperUI/Components/Pages/Search.razor
@@ -32,9 +32,9 @@
     </Select>
 
     <div class="input-group searchBar">
-        <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" 
+        <input type="search" class="form-control rounded" placeholder="Search by ingredient" aria-label="Search" 
             aria-describedby="search-addon" @bind-value="@foodIngredient" @onkeydown="@pressEnter" />
-        <button class="btn btn-outline-primary" @onclick="@SearchForMeal">search</button>
+        <button class="btn btn-outline-primary" @onclick="@SearchForMeal">Search</button>
     </div>
 </div>
 
